--- a/views/404.ejs
+++ b/views/404.ejs
@@ -16,22 +16,22 @@
     ============================================ -->
 
     <!-- Vendor CSS (Contain Bootstrap, Icon Fonts) -->
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/vendor/icofont.min.css" />
+    <link rel="stylesheet" href="/css/vendor/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/vendor/icofont.min.css" />
 
     <!-- Plugin CSS (Global Plugins Files) -->
-    <link rel="stylesheet" href="assets/css/plugins/animate.css">
-    <link rel="stylesheet" href="assets/css/plugins/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/nice-select.css">
-    <link rel="stylesheet" href="assets/css/plugins/venobox.min.css" />
+    <link rel="stylesheet" href="/css/plugins/animate.css">
+    <link rel="stylesheet" href="/css/plugins/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/css/plugins/nice-select.css">
+    <link rel="stylesheet" href="/css/plugins/venobox.min.css" />
 
     <!-- Minify Version -->
-    <!-- <link rel="stylesheet" href="assets/css/vendor/vendor.min.css">
-    <link rel="stylesheet" href="assets/css/plugins/plugins.min.css"> -->
+    <!-- <link rel="stylesheet" href="/css/vendor/vendor.min.css">
+    <link rel="stylesheet" href="/css/plugins/plugins.min.css"> -->
 
     <!-- Style CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- <link rel="stylesheet" href="assets/css/style.min.css"> -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="/css/style.min.css"> -->
 
 </head>
 
@@ -333,29 +333,29 @@
     <!-- Global Vendor, plugins JS -->
 
     <!-- Vendor JS -->
-    <script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/vendor/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
-    <script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="/js/vendor/jquery-3.5.1.min.js"></script>
+    <script src="/js/vendor/jquery-migrate-3.3.0.min.js"></script>
+    <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
 
     <!--Plugins JS-->
-    <script src="assets/js/plugins/swiper-bundle.min.js"></script>
-    <script src="assets/js/plugins/jquery.appear.min.js"></script>
-    <script src="assets/js/plugins/jquery.nice-select.js"></script>
-    <script src="assets/js/plugins/venobox.min.js"></script>
-    <script src="assets/js/plugins/jquery.waypoints.js"></script>
-    <script src="assets/js/plugins/images-loaded.min.js"></script>
-    <script src="assets/js/plugins/isotope.pkgd.min.js"></script>
-    <script src="assets/js/plugins/counter.js"></script>
-    <script src="assets/js/plugins/ajax-mail.js"></script>
-    <script src="assets/js/plugins/material-scrolltop.js"></script>
+    <script src="/js/plugins/swiper-bundle.min.js"></script>
+    <script src="/js/plugins/jquery.appear.min.js"></script>
+    <script src="/js/plugins/jquery.nice-select.js"></script>
+    <script src="/js/plugins/venobox.min.js"></script>
+    <script src="/js/plugins/jquery.waypoints.js"></script>
+    <script src="/js/plugins/images-loaded.min.js"></script>
+    <script src="/js/plugins/isotope.pkgd.min.js"></script>
+    <script src="/js/plugins/counter.js"></script>
+    <script src="/js/plugins/ajax-mail.js"></script>
+    <script src="/js/plugins/material-scrolltop.js"></script>
 
     <!-- Minify Version -->
     <!-- <script src="assets/js/vendor.min.js"></script>
-    <script src="assets/js/plugins.min.js"></script> -->
+    <script src="/js/plugins.min.js"></script> -->
 
     <!--Main JS (Common Activation Codes)-->
-    <script src="assets/js/main.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
