--- a/views/404.ejs
+++ b/views/404.ejs
@@ -16,22 +16,22 @@
     ============================================ -->
 
     <!-- Vendor CSS (Contain Bootstrap, Icon Fonts) -->
-    <link rel="stylesheet" href="/css/vendor/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/vendor/icofont.min.css" />
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/vendor/icofont.min.css" />
 
     <!-- Plugin CSS (Global Plugins Files) -->
-    <link rel="stylesheet" href="/css/plugins/animate.css">
-    <link rel="stylesheet" href="/css/plugins/swiper-bundle.min.css">
-    <link rel="stylesheet" href="/css/plugins/nice-select.css">
-    <link rel="stylesheet" href="/css/plugins/venobox.min.css" />
+    <link rel="stylesheet" href="css/plugins/animate.css">
+    <link rel="stylesheet" href="css/plugins/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/plugins/nice-select.css">
+    <link rel="stylesheet" href="css/plugins/venobox.min.css" />
 
     <!-- Minify Version -->
-    <!-- <link rel="stylesheet" href="/css/vendor/vendor.min.css">
-    <link rel="stylesheet" href="/css/plugins/plugins.min.css"> -->
+    <!-- <link rel="stylesheet" href="css/vendor/vendor.min.css">
+    <link rel="stylesheet" href="css/plugins/plugins.min.css"> -->
 
     <!-- Style CSS -->
-    <link rel="stylesheet" href="/css/style.css">
-    <!-- <link rel="stylesheet" href="/css/style.min.css"> -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
 
 </head>
 
