--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,8 @@
     ============================================ -->
 
     <!-- Vendor CSS (Contain Bootstrap, Icon Fonts) -->
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/vendor/icofont.min.css" />
+    <link rel="stylesheet" href="/css/vendor/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/vendor/icofont.min.css" />
 
     <!-- Plugin CSS (Global Plugins Files) -->
     <link rel="stylesheet" href="/css/plugins/animate.css">
