--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -6,10 +6,10 @@
     <!-- Global Vendor, plugins JS -->
 
     <!-- Vendor JS -->
-    <script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/vendor/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
-    <script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="/js/vendor/jquery-3.5.1.min.js"></script>
+    <script src="/js/vendor/jquery-migrate-3.3.0.min.js"></script>
+    <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
 
     <!--Plugins JS-->
     <script src="/js/plugins/swiper-bundle.min.js"></script>
@@ -24,8 +24,8 @@
     <script src="/js/plugins/material-scrolltop.js"></script>
 
     <!-- Minify Version -->
-    <!-- <script src="assets/js/vendor.min.js"></script>
-    <script src="assets/js/plugins.min.js"></script> -->
+    <!-- <script src="/js/vendor.min.js"></script>
+    <script src="/js/plugins.min.js"></script> -->
 
     <!--Main JS (Common Activation Codes)-->
-    <script src="assets/js/main.js"></script>
+    <script src="/js/main.js"></script>
