--- a/views/index.ejs
+++ b/views/index.ejs
@@ -930,36 +930,8 @@
     <button class="material-scrolltop" type="button"></button>
     </main>
 
-    <!-- Global Vendor, plugins JS -->
+    <%- include("./partials/scripts.ejs") %>
 
-    <!-- JS Files
-    ============================================ -->
-    <!-- Global Vendor, plugins JS -->
-
-    <!-- Vendor JS -->
-    <script src="assets/js/vendor/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/vendor/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
-    <script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>
-
-    <!--Plugins JS-->
-    <script src="/js/plugins/swiper-bundle.min.js"></script>
-    <script src="/js/plugins/jquery.appear.min.js"></script>
-    <script src="/js/plugins/jquery.nice-select.js"></script>
-    <script src="/js/plugins/venobox.min.js"></script>
-    <script src="/js/plugins/jquery.waypoints.js"></script>
-    <script src="/js/plugins/images-loaded.min.js"></script>
-    <script src="/js/plugins/isotope.pkgd.min.js"></script>
-    <script src="/js/plugins/counter.js"></script>
-    <script src="/js/plugins/ajax-mail.js"></script>
-    <script src="/js/plugins/material-scrolltop.js"></script>
-
-    <!-- Minify Version -->
-    <!-- <script src="assets/js/vendor.min.js"></script>
-    <script src="assets/js/plugins.min.js"></script> -->
-
-    <!--Main JS (Common Activation Codes)-->
-    <script src="assets/js/main.js"></script>
 
 </body>
 
