--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,35 +3,7 @@
 
 <head>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Lendex - Personal Portfolio Bootstrap Template</title>
-    <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
-
-    <!-- CSS
-    ============================================ -->
-
-    <!-- Vendor CSS (Contain Bootstrap, Icon Fonts) -->
-    <link rel="stylesheet" href="css/vendor/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/vendor/icofont.min.css" />
-
-    <!-- Plugin CSS (Global Plugins Files) -->
-    <link rel="stylesheet" href="css/plugins/animate.css">
-    <link rel="stylesheet" href="css/plugins/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/plugins/nice-select.css">
-    <link rel="stylesheet" href="css/plugins/venobox.min.css" />
-
-    <!-- Minify Version -->
-    <!-- <link rel="stylesheet" href="css/vendor/vendor.min.css">
-    <link rel="stylesheet" href="css/plugins/plugins.min.css"> -->
-
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
+       <%- include("./partials/head.ejs") %>
 
 </head>
 
