--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -32,9 +32,9 @@
                         <div class="col-auto mb-5">
                             <!-- Start Single Footer Info -->
                             <div class="footer-single-info">
-                                <a href="tel:+0123456789" class="info-box">
+                                <a href="tel:+201550453123" class="info-box">
                                     <span class="icon"><i class="icofont-phone"></i></span>
-                                    <span class="text">0123456789</span>
+                                    <span class="text">01550453123</span>
                                 </a>
                             </div>
                             <!-- Start Single Footer Info -->
@@ -68,13 +68,13 @@
                     <div class="row justify-content-center justify-content-md-between align-items-center flex-column-reverse flex-md-row">
                         <div class="col-auto">
                             <div class="footer-copyright">
-                                <p class="copyright-text">&copy; 2021 <a href="index.html">Lendex</a> Made with <i class="icofont-heart"></i> by <a href="https://hasthemes.com/" target="_blank">HasThemes</a> </p>
+                                <p class="copyright-text">&copy; 2021 <a href="index.html">Lendex</a> Made with <i class="icofont-heart"></i> by <a href="https://hasthemes.com/" target="_blank">Gaber Mohamed</a> </p>
                             </div>
                         </div>
                         <div class="col-auto">
                             <a href="index.html" class="footer-logo">
                                 <div class="logo">
-                                    <img src="assets/images/logo/logo.png" alt="">
+                                    <img src="/images/logo/logo.png" alt="">
                                 </div>
                             </a>
                         </div>
