--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,13 +22,13 @@
                         <div class="col-xxl-7">
                             <div class="hero-content">
                                 <h3 class="title-big">Hello! I’m</h3>
-                                <h2 class="title-large">Mirta <span class="shape-mark">Akins</span></h2>
+                                <h2 class="title-large">Gaber <span class="shape-mark">El Sayed</span></h2>
                                 <p>UI/UX Designer specializing in Shopify & Webflow.</p>
 
                                 <a href="#" class="btn btn-xl btn-outline-one icon-space-left">Get Resume <i class="icofont-download"></i></a>
 
                                 <div class="video-link">
-                                    <a class="wave-btn" href="https://youtu.be/MKjhBO2xQzg" data-autoplay="true" data-vbtype="video">
+                                    <a class="wave-btn" href="https://youtu.be/" data-autoplay="true" data-vbtype="video">
 
                                         <div class="ripple"><i class="icofont-ui-play"></i></div>
                                     </a>
