--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -53,9 +53,8 @@
                             <!-- Start Single Footer Info -->
                             <div class="footer-single-info">
                                 <ul class="social-link">
-                                    <li><a href="https://www.example.com" target="_blank"><i class="icofont-facebook"></i></a></li>
-                                    <li><a href="https://www.example.com" target="_blank"><i class="icofont-dribbble"></i></a></li>
-                                    <li><a href="https://www.example.com" target="_blank"><i class="icofont-linkedin"></i></a></li>
+                                    <li><a href="https://www.facebook.com/profile.php?id=100084822845713" target="_blank"><i class="icofont-facebook"></i></a></li>
+                                    <li><a href="" target="_blank"><i class="icofont-linkedin"></i></a></li>
                                 </ul>
                             </div>
                             <!-- Start Single Footer Info -->
