--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,8 +5,8 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col">
                             <!-- Start Header Logo -->
-                            <a href="index.html" class="header-logo">
-                                <img src="assets/images/logo/logo.png" alt="">
+                            <a href="/" class="header-logo">
+                                <img src="/images/logo/logo.png" alt="">
                             </a>
                             <!-- End Header Logo -->
                         </div>
@@ -14,41 +14,15 @@
                             <!-- Start Header Menu -->
                             <ul class="header-nav">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="has-dropdown">
-                                    <a href="service-list.html">Service</a>
-                                    <ul class="submenu">
-                                        <li><a href="service-list.html">Services</a></li>
-                                        <li><a href="service-details.html">Service Details</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-dropdown">
-                                    <a href="blog-list.html">Blog</a>
-                                    <ul class="submenu">
-                                        <li><a href="blog-list.html">Blog List Full Width</a></li>
-                                        <li><a href="blog-list-sidebar-left.html">Blog List Left Sidebar</a></li>
-                                        <li><a href="blog-list-sidebar-right.html">Blog List Right Sidebar</a></li>
-                                        <li><a href="blog-details.html">Blog Details Full Width</a></li>
-                                        <li><a href="blog-details-sidebar-left.html">Blog Details Left Sidebar</a></li>
-                                        <li><a href="blog-details-sidebar-right.html">Blog Details Right Sidebar</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-dropdown">
-                                    <a href="#">Pages</a>
-                                    <ul class="submenu">
-                                        <li><a href="about.html">About Us</a></li>
-                                    <li><a href="project-list.html">Project</a></li>
-                                    <li><a href="project-details.html">Project Details</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
-                                    <li><a href="404-page.html">404 Page</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
+
+
+                                <li><a href="/contact">Contact</a></li>
                             </ul>
                             <!-- End Header Menu -->
                         </div>
                         <div class="col">
                             <div class="header-btn-link text-end">
-                               <a href="contact.html" class="btn btn-sm btn-outline-one icon-space-left">Hire Me <i class="icofont-double-right"></i></a>
+                               <a href="/contact" class="btn btn-sm btn-outline-one icon-space-left">Hire Me <i class="icofont-double-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -63,7 +37,7 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col">
                         <div class="mobile-logo">
-                            <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a>
+                            <a href="index.html"><img src="/images/logo/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col">
@@ -121,7 +95,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="contact.html"><span>Contact</span></a>
+                                <a href="/contact"><span>Contact</span></a>
                             </li>
                         </ul>
                     </div> <!-- End Mobile Menu Nav -->
