--- a/views/404.ejs
+++ b/views/404.ejs
@@ -71,7 +71,7 @@
         <button class="material-scrolltop" type="button"></button>
     </main>
 
-    <%- include("../partials/scripts.ejs") %>
+    <%- include("./partials/scripts.ejs") %>
 
 
 </body>
